--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "babel": "^5.0.12",
-    "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
     "bootstrap": "^3.3.5",
     "chalk": "^1.0.0",
+    "commander": "^2.9.0",
     "express": "^4.12.0",
-    "fs-extra": "^0.24.0",
-    "lodash": "^4.12.0",
+    "itunes-library-stream": "0.0.0",
+    "lodash": "^4.15.0",
     "mime": "^1.3.4",
-    "morgan": "1.6.1",
-    "musicmetadata": "^2.0.1",
+    "musicmetadata": "^2.0.2",
+    "node-status": "^0.1.7",
     "nodemon": "^1.3.7",
-    "pg": "4.5.5",
-    "pg-hstore": "2.3.2",
-    "pg-native": "~1.10.0",
-    "range-stream": "1.1.0",
-    "send-seekable": "~1.0.2",
-    "sequelize": "3.23.0",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
+    "pg-native": "^1.10.0",
+    "request": "^2.74.0",
+    "sequelize": "^3.24.1",
     "serve-favicon": "^2.2.0",
-    "simple-bufferstream": "1.0.0"
+    "userhome": "^1.0.0",
+    "volleyball": "1.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
